gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-if-else-using-impl.rs
trait Foo {

    fn foo<'a>(x: &i32, y: &'a i32) -> &'a i32;

}

impl Foo for () {

    fn foo<'a>(x: &i32, y: &'a i32) -> &'a i32 {

        if x > y { x } else { y } // { dg-error ".E0623." "" { target *-*-* } }

    }

}

fn main() {}

